<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">3 Words Story</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_play">Play</string>
    <string name="title_activity_local_game">LocalGame</string>
    <string name="title_activity_waiting_screen">Lobby</string>

    <!--  Bluetooth -->
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>

    <!-- Starting Screen -->
    <string name="multiplayer">Multiplayer</string>
    <string name="localgame">Local Game</string>
    <string name="hall_of_stories">Hall of Stories</string>
    <string name="about">About</string>
    <!-- Game has Started Dialog -->
    <string name="dialog_gamehasstarted_desc">You are already in a game.</string>
    <string name="dialog_gamehasstarted_resume">Resume</string>
    <string name="dialog_gamehasstarted_newgame">New Game</string>

    <!-- About Screen -->
    <string name="madefor">This application was made by Ioannis Pierros for the Google Developers Thessaloniki android study jams.</string>
    <string name="instructions">"\u2022 It's a simple game where players take turns contributing their 3 words and create a story.

\u2022 One of the players needs to 'host' the game and the rest to 'join' him. Please do so one at a time.

\u2022 The game ends when the players decide so (or when the host turns of the Bluetooth).

\u2022 Currently there is no option to reconnect in-case of disconnection."</string>
    <string name="instructions_button">Instructions</string>
    <string name="contact_button">Contact me</string>


    <!-- Local Game Screen -->
    <string name="select_host_device">Select the host\'s device</string>
    <string name="hostgame_button">Host Game</string>
    <string name="join_button">Join</string>
    <string name="spectate_button">Spectate</string>
    <string name="refresh_button">Refresh</string>



    <!-- Waiting Screen -->
    <string name="waiting">Waiting for the host to start the game</string>
    <string name="waitingForHost">Waiting for the host to start the game. </string>
    <string name="playersJoined">There are <xliff:g id="number" example="5">%d</xliff:g> people in the room.</string>
    <string name="your_mac_is">Your MAC:  <xliff:g id="string" example="XX:XX:XX:XX:XX:XX">%s</xliff:g></string>
    <string name="startgame_button">Start the Game</string>
    <string name="resume_story">To the Story!</string>
    <string name="title_activity_hall_of_stories">Hall Of Stories</string>
    <string name="title_activity_story__preview">Story Preview</string>
    <string name="ensure_discoverable">Ensure Discoverable</string>



    <!-- Play Screen -->
    <string name="goToChat">To the Chat!</string>
    <string name="save_story">Save the Story</string>

    <string name="email">E-mail</string>
    <string name="handle_description">A handle. Pull it to change the size of the fragments</string>

</resources>
